# foundry

./: .dockerignore  .driver_config.json  .gitignore  .gitmodules  Dockerfile  MUJOCO_LOG.TXT  README.md  create_env.py  drivers.nix  flake.nix  install_cuda.sh  plot.sh  pyproject.toml  pytest.ini  requirements.nix  requirements.txt  result  sweep.sh  sweep_iter.sh  test.py
.zed/: settings.json
denvtool/: pyproject.toml
denvtool/denvtool/: __init__.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.jax  Dockerfile.template  build.sh  build_jax.py  config.py  run.sh  (+2 more)
docs/: Makefile  (+4 more)
examples/: data.py  dataclass.py  datasets.ipynb  diffusion.ipynb  diffusion.py  distributed.py  image_diffusion.ipynb  mpc.ipynb  mpc.py  ppo.py  pusht.py  pusht_env.py  pymunk_env.ipynb  pyproject.toml  rich.ipynb  rollout.py  simple_diffusion.ipynb  solver.py  tracing_test.py  train.py  tutorial.py  vanilla_train.py
examples/notebooks/: canvas.ipynb  datasets.ipynb  gt_simple_cond_diffusion.ipynb  image_diffusion.ipynb  image_diffusion_forward.ipynb  mlp.ipynb  mpc.ipynb  rich.ipynb  simple_cond_diffusion.ipynb  simple_diffusion.ipynb  transform.ipynb
examples/notebooks/diffusion/: gt_simple_cond_diffusion.ipynb
examples/notebooks/envs/: interactive.ipynb  pusht.ipynb  pusht_collect.ipynb  pusht_data.pkl  pusht_diffusion.ipynb
examples/src/common/: __init__.py
examples/src/diffusion_policy/: __init__.py  __main__.py
examples/src/image_classifier/: __init__.py  visualize.ipynb
examples/src/image_diffusion/: class_conditional.py  vanilla.py
examples/src/net/: __init__.py  attention.py  mlp.py  resnet.py
examples/src/policy_eval/: __init__.py  diffusion_estimator.py  diffusion_policy.py
examples/sweeps/: sam_batch_size.yaml  sam_start_points.yaml
nix-custom/ml_dtypes-0.4.0/: default.nix  pyproject.toml
nixpy-custom/cmake-3.30.2/stub/: pyproject.toml
nixpy-custom/cmake-3.30.2/stub/cmake/: __init__.py
nixpy-custom/jax-0.4.33/: default.nix  pyproject.toml
nixpy-custom/jax-0.4.34/: default.nix  pyproject.toml
nixpy-custom/jax-cuda12-plugin-0.4.34/: default.nix  pyproject.toml
nixpy-custom/matplotlib-3.9.1/: default.nix  pyproject.toml
nixpy-custom/meson-python-0.15.0/: default.nix  pyproject.toml
nixpy-custom/scipy-1.14.0/: default.nix  pyproject.toml
nixpy-custom/wandb-0.17.9/: core-hatch.py  default.nix  hardcode-git-path.patch  nvidia-gpu-stats-hatch.py  pyproject.toml
projects/cond-diffusion/: pyproject.toml
projects/cond-diffusion-toy/: pyproject.toml
projects/cond-diffusion-toy/notebook/: final_plots.ipynb  increasing_ot_distance.ipynb  increasing_val_loss.ipynb  inherent_bandwidth.ipynb  interp_comparison_mall.ipynb  nw_trained_comparison.ipynb  test_diffusion.ipynb  test_diffusion_multi.ipynb
projects/cond-diffusion-toy/scripts/: toy_diffusion  toy_perplexity
projects/cond-diffusion-toy/src/toy_diffusion/: data.py  main.py  perplexity.py
projects/cond-diffusion-toy/src/toy_eval/: .gitignore  __init__.py  datasets.py  diffusion_estimator.py  diffusion_learned.py  sweep1.yaml  sweep2.yaml  sweep_analysis.ipynb
projects/cond-diffusion-toy/sweeps/: architecture.yaml
projects/cond-diffusion/src/policy_eval/: __init__.py  behavior_cloning.py  diffusion_estimator.py  diffusion_policy.py  diffusion_train.ipynb  learned_estimator.py  nearest_neighbor.py  sweep.yaml  sweep1.yaml
projects/examples/: pyproject.toml
projects/examples/notebooks/: rich.ipynb
projects/examples/notebooks/common/: dataclasses.ipynb  train.ipynb
projects/examples/notebooks/datasets/: env.ipynb  pusht.ipynb
projects/examples/notebooks/diffusion/: gt_image_diffusion.ipynb  high_dim_diffusion.ipynb
projects/examples/notebooks/env/: inverting_one_way.ipynb  nonparametric.ipynb  pusht.ipynb  pusht_collect.ipynb  pusht_diffusion.ipynb  reacher_collect.ipynb  reacher_diffusion.ipynb  robomimic.ipynb  viewer.ipynb
projects/examples/src/common/: __init__.py
projects/examples/src/image_classifier/: __init__.py  visualize.ipynb
projects/examples/src/image_diffusion/: class_conditional.py  vanilla.py
projects/examples/src/net/: mlp.py  resnet.py
projects/examples/src/policy_eval/: __init__.py  diffusion_policy.py
projects/examples/sweeps/: sam_start_points.yaml
projects/image-classifier/: pyproject.toml
projects/image-classifier/scripts/: image_classifier
projects/image-classifier/src/image_classifier/: __init__.py
projects/image-diffusion/: pyproject.toml
projects/image-diffusion/notebooks/: check_linearity.ipynb  latent_embed.py  linearity.ipynb  stable_diffusion.ipynb
projects/image-diffusion/scripts/: image_diffusion  image_diffusion_eval
projects/image-diffusion/src/image_diffusion/: eval.py  main.py
projects/image-diffusion/sweeps/: random_seeds.yaml
projects/language-model/: pyproject.toml
projects/language-model/scripts/: language_model
projects/language-model/src/language_model/: __init__.py  core.py  sweeps.py
projects/language-model/sweeps/: sam_adam.yaml  sam_sgd.yaml  sam_start_points.yaml
projects/max_diffusion/: README.md  pyproject.toml
projects/models/: pyproject.toml
projects/models/src/stanza/model/: __init__.py  gpt2.py  mlp.py  resnet.py  unet.py
projects/policy-eval/: pyproject.toml
projects/policy-eval/notebooks/: ddpm_ddim.ipynb  linearity.ipynb  linearity_analysis.ipynb  lower_bounds.ipynb  ot_test.ipynb  transform_data_ablation.ipynb
projects/policy-eval/scripts/: policy_eval
projects/policy-eval/src/policy_eval/: __init__.py  behavior_cloning.py  common.py  config.py  diffusion_policy.py  main.py
projects/policy-eval/src/policy_eval/lower_bounds/: stable.py
projects/policy-eval/src/policy_eval/methods/: behavior_cloning.py  diffusion_estimator.py  diffusion_policy.py  get_pt_pretrained.py  learned_estimator.py  nearest_neighbor.py  pretrained.py
projects/policy-eval/src/policy_eval/methods/models/: conditional_unet1d_jax.py  conditional_unet1d_pt.py
projects/policy-eval/sweeps/: lower_bound.yaml  lower_bound_action_lengths.yaml  lower_bound_chunking.yaml  pusht_estimator.yaml  pusht_ot.yaml
(+608 files in other folders)
