[project]
name = "foundry-meta"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "foundry[ipython,docs] @ file:///${PROJECT_ROOT}/packages/foundry",
    "foundry-models @ file:///${PROJECT_ROOT}/projects/models",
    "cond_diffusion @ file:///${PROJECT_ROOT}/projects/cond-diffusion",
    "image-classifier @ file:///${PROJECT_ROOT}/projects/image-classifier",
    "language-model @ file:///${PROJECT_ROOT}/projects/language-model",
    "cond-diffusion-toy @ file:///${PROJECT_ROOT}/projects/cond-diffusion-toy",
    "wandb>=0.17.4",
]
requires-python = "<3.11,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.4.28",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "-e foundry[ipython,docs] @ file:///${PROJECT_ROOT}/packages/foundry",
    "-e foundry-model @ file:///${PROJECT_ROOT}/projects/models",
    "-e cond_diffusion @ file:///${PROJECT_ROOT}/projects/cond-diffusion",
    "-e image-classifier @ file:///${PROJECT_ROOT}/projects/image-classifier",
    "-e language-model @ file:///${PROJECT_ROOT}/projects/language-model",
    "-e cond-diffusion-toy @ file:///${PROJECT_ROOT}/projects/cond-diffusion-toy",
    "pytest>=8.2.2",
]

# These are annoying and not used...
[tool.pdm.resolution]
excludes = ["pytinyrenderer", "evdev"]

[tool.nixpy]
python-version = "3.10"
platforms = ["x86_64-linux", "powerpc64le-linux", "aarch64-darwin"]