[project]
name = "foundry-meta"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "foundry-core[ipython] @ file:///${PROJECT_ROOT}/packages/core",
    "foundry-systems @ file:///${PROJECT_ROOT}/packages/systems",
    "foundry-models @ file:///${PROJECT_ROOT}/packages/models",
    "policy-eval @ file:///${PROJECT_ROOT}/projects/policy-eval",
    "image-classifier @ file:///${PROJECT_ROOT}/projects/image-classifier",
    "language-model @ file:///${PROJECT_ROOT}/projects/language-model",
    "image-diffusion @ file:///${PROJECT_ROOT}/projects/image-diffusion",
    "cond-diffusion-toy @ file:///${PROJECT_ROOT}/projects/cond-diffusion-toy",
    "ipywidgets>=8.1.5",
]
requires-python = "<3.11,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.4.28",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "-e foundry-core @ file:///${PROJECT_ROOT}/packages/core",
    "-e foundry-systems @ file:///${PROJECT_ROOT}/packages/systems",
    "-e foundry-models @ file:///${PROJECT_ROOT}/packages/models",
    "-e policy-eval @ file:///${PROJECT_ROOT}/projects/policy-eval",
    "-e image-classifier @ file:///${PROJECT_ROOT}/projects/image-classifier",
    "-e language-model @ file:///${PROJECT_ROOT}/projects/language-model",
    "-e cond-diffusion-toy @ file:///${PROJECT_ROOT}/projects/cond-diffusion-toy",
	
    # Docmentation utilities
    "sphinx>=7.2.6",
    "sphinx-design>=0.5.0",
    "sphinx-remove-toctrees>=0.0.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-book-theme>=1.1.2",
    "sphinx-autodoc-typehints>=2.0.0",
    "furo>=2024.1.29",
    "sphinx-toolbox>=3.5.0",

    "pytest>=8.2.2",
]

# These are annoying and not used...
[tool.pdm.resolution]
excludes = ["pytinyrenderer", "evdev"]

[tool.nixpy]
python-version = "3.10"
platforms = ["x86_64-linux", "powerpc64le-linux", "aarch64-darwin"]
