[project]
name = "stanza-examples"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "stanza @ file:///${PROJECT_ROOT}/..",
    "aqtp>=0.7.3",
    "brax>=0.10.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
cuda12 = [
    "jax==0.4.28",
    "jax-cuda12-plugin==0.4.28"
]
cuda12_pip = [
    "jax==0.4.28",
    "jax-cuda12-plugin==0.4.28",
    "nvidia-cublas-cu12>=12.1.3.1",
    "nvidia-cuda-cupti-cu12>=12.1.105",
    "nvidia-cuda-nvcc-cu12>=12.1.105",
    "nvidia-cuda-runtime-cu12>=12.1.105",
    "nvidia-cudnn-cu12>=8.9.2.26,<9.0",
    "nvidia-cufft-cu12>=11.0.2.54",
    "nvidia-cusolver-cu12>=11.4.5.107",
    "nvidia-cusparse-cu12>=12.1.0.106",
    "nvidia-nccl-cu12>=2.18.1",
    "nvidia-nvjitlink-cu12>=12.1.105"
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.2",
    "ipywidgets>=8.1.2",
    "jupyterlab>=4.1.2",
    "-e stanza @ file:///${PROJECT_ROOT}/..",
]
