[project]
name = "ml_dtypes"
version = "0.4.0"


dependencies = [
    # Ensure numpy release supports Python version.
    "numpy>=1.21",
    "numpy>=1.21.2; python_version>='3.10'",
    "numpy>=1.23.3; python_version>='3.11'",
    "numpy>=1.26.0; python_version>='3.12'",
]

[build-system]
requires = [
    # We must build against NumPy 2.0 for the resulting wheels to
    # be compatible with both NumPy 1.X and 2.X.
    "numpy~=2.0.0",
    "setuptools~=70.1.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ml_dtypes"]
include-package-data = false

[tool.setuptools.package-data]
ml_dtypes = ["py.typed"]
"ml_dtypes.include" = ["*.h"]