[project]
name = "jax"
version = "0.4.34"

dependencies = [
    "numpy >=1.26.0; python_version >= '3.12'",
	"scipy>=1.11.1; python_version>='3.12'",
    "numpy >=1.24",
    "scipy >=1.10",
    "opt-einsum",
    "ml-dtypes>=0.2.0",
    "jaxlib==0.4.34",
    # depend on the cuda plugin by default!
    # but only for linux...
    "jax-cuda12-plugin==0.4.34; sys_platform == 'linux'"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
