[project]
name = "matplotlib"
version = "3.9.1"

dependencies = [
    "contourpy >= 1.0.1",
    "cycler >= 0.10",
    "fonttools >= 4.22.0",
    "kiwisolver >= 1.3.1",
    "numpy >= 1.23",
    "packaging >= 20.0",
    "pillow >= 8",
    "pyparsing >= 2.3.1",
    "python-dateutil >= 2.7",
    "importlib-resources >= 3.2.0; python_version < '3.10'",
]

requires-python = ">=3.9"

[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.13.1",
    "pybind11>=2.6",
    "setuptools_scm>=7",
    "numpy>=2.0.0rc1,<2.3",
]