[project]
name = "scipy"
version = "1.14.0"

dependencies = ["numpy>=1.23.5,<2.3"]

[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0,<0.19.0",
    "Cython>=3.0.8,<3.1.0",
    "pybind11>=2.12.0,<2.13.0",
    "pythran>=0.14.0,<0.17.0",
    "numpy>=2.0.0rc1,<2.3",
    "wheel>=0.43.0",
    "setuptools>=70"
]