[build-system]
requires = ["hatchling", "typing_extensions"]
build-backend = "hatchling.build"

[project]
name = "wandb"
version = "0.17.9"
requires-python = ">=3.7"
dependencies = [
    "Click>=7.1,!=8.0.0",        # click 8.0.0 is broken
    "GitPython>=1.0.0,!=3.1.29", # CVE-2022-24439
    "requests>=2.0.0,<3",
    "psutil>=5.0.0",
    "sentry-sdk>=1.0.0",
    "docker-pycreds>=0.4.0",
    "setuptools>=70",
    "protobuf>=3.12.0,!=4.21.0,<6; python_version < '3.9' and sys_platform == 'linux'",
    "protobuf>=3.15.0,!=4.21.0,<6; python_version == '3.9' and sys_platform == 'linux'",
    "protobuf>=3.19.0,!=4.21.0,<6; python_version > '3.9' and sys_platform == 'linux'",
    "protobuf>=3.19.0,!=4.21.0,<6; sys_platform != 'linux'",
    "PyYAML",
    "setproctitle",
    "platformdirs",
    "typing_extensions; python_version < '3.10'",
]