[project]
name = "cond-diffusion"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "stanza"
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
policy_eval = "policy_eval:run"

[tool.pdm]
distribution = true