[project]
name = "cond-diffusion"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "foundry"
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
policy_eval = "policy_eval:run"

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
