[project]
name = "image-classifier"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "foundry",
    "foundry-models"
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
image_classifier = "image_classifier:run"

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"