[project]
name = "image-diffusion"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "foundry-core @ file:///${PROJECT_ROOT}/../../packages/core",
    "foundry-systems @ file:///${PROJECT_ROOT}/../../packages/systems",
    "foundry-models @ file:///${PROJECT_ROOT}/../../packages/models",
    "omegaconf >= 2.3",
    "wandb >= 0.17",

    # For converting stable diffusion to
    # a compatible format.
    "diffusers>=0.31.0",
    "transformers>=4.46.3",
    "torch>=2.5.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
