[project]
name = "language-model"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "foundry",
    "foundry-models"
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
language_model = "language_model:run"
language_model_sweep = "language_model.sweeps:run"

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"