[project]
name = "max_diffusion"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Max Simchowitz", email = "msimchow@csail.mit.edu"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../..#egg=stanza",
]
