[project]
name = "stanza-models"
version = "0.1.0"
description = "Common utilities for projects"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "stanza",
    "transformers>=4.42.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"