[project]
name = "policy-eval"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pfrommer", email = "dan.pfrommer@gmail.com"},
]
dependencies = [
    "foundry-core",
    "foundry-systems",
    "foundry-models",
    "omegaconf >= 2.3"
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
policy_eval = "policy_eval:run"

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
